tests/models/enum/unnamed/i8/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        i8
    ),
}
fn main() {}
