tests/models/enum/unnamed/i8/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2.0)]
        i8
    ),
}
fn main() {}
